# qrt

./: .gitignore  .python-version  README.md  benchamark.py  data_preprocess.ipynb  evaluate.py  main.ipynb  main.py  pyproject.toml  qrt.ipynb  run_qrf.py  run_qrt.py  statistic.py  test.ipynb  test.py  test_modified_split.py  test_tree_types.py  train.ipynb
docs/: results.md  results_metrics.md
experiments/: __init__.py  benchmark.py  benchmark_core.py  benchmark_size_sweep.py  plot_advanced_metrics.py  results_metrics.py
feature/: check.ipynb
models/: origin_quantile_regression_tree.py  quantile_regression_forest.py  quantile_regression_model_forest.py  quantile_regression_model_leaf_tree.py  quantile_regression_model_tree.py  quantile_regression_tree.py  quantile_tree_ensemble.py  qunatile_regression_model_leaf_tree.py  qunatile_regression_model_node_tree.py  qunatile_regression_modenode_tree.py
output/: plot_annual_trading.py
output/benchmark/: metrics.csv
output/benchmark_qrt_size/: qrt_size_sweep.csv
output/ql_10_qh_90/: annualized_return_by_model.csv  annualized_return_by_model_criterion.csv  annualized_return_long_short_by_model.csv  metrics.csv
quantile_forest/: _quantile_forest_fast.cpp  _utils.cpp
scripts/: compare_model_avg_annualized.py  compare_model_criterion_annualized.py  generate_ann_return_comparison.py  generate_tree_ann_return_comparison.py  run_forest_variants.py  run_tree_variants.py
tests/: qrt.ipynb  train.ipynb
utils/: config.py  data_loader.py  data_preprocess.ipynb  performance_evaluation.py  trading_strategy.py
(+23 files in other folders)
